<resources>
    <string name="app_name">北极星安装助手</string>

    <string name="please_open_wifi_switch">请打开WiFi开关</string>

    <string name="please_connect_device">请连接设备</string>

    <string name="home_text">首页</string>

    <string name="video_preview">视屏预览</string>

    <string name="car_speed">车速</string>

    <string name="location">定位</string>

    <string name="file_type">文件类型</string>

    <string name="select_date">选择日期</string>

    <string name="start_time">开始时间</string>

    <string name="end_time">结束时间</string>

    <string name="channel">通道</string>

    <string name="stream_type">码流类型</string>

    <string name="export">导出</string>

    <string name="exporting_files">正在导出文件</string>

    <string name="log">日志</string>

    <string name="video">视频</string>

    <string name="channels">通道</string>

    <string name="all">全部</string>

    <string name="main_stream">主码流</string>

    <string name="child_stream">子码流</string>

    <string name="no_car_info">——</string>

    <string name="four_g_signal_level">4G信号</string>

    <string name="location_signal">定位信号</string>

    <string name="far_light">远光灯</string>

    <string name="near_light">近光灯</string>

    <string name="left_turn_light">左转灯</string>

    <string name="right_turn_light">右转灯</string>

    <string name="brake">制动</string>

    <string name="target_platforms">部标平台</string>

    <string name="have_location">已定位</string>

    <string name="no_location">未定位</string>

    <string name="open">开启</string>

    <string name="close">关闭</string>

    <string name="start_time_default_value">00:00:00</string>

    <string name="end_time_default_value">23:59:00</string>

    <string name="look_plate_status">下滑查看车辆状态</string>

    <string name="please_open_usb_network_share">请打开USB网络共享~</string>

    <string name="video_show">视频展示</string>

    <string name="exporting">进行导出中…</string>

    <string name="audio">音频</string>

    <string name="audio_video">音视频</string>

    <string name="main_equipment">主设备</string>

    <string name="reserve_equipment">备设备</string>

    <string name="no_related_documents">没有相关文件</string>

    <string name="adas_calibration">ADAS标定</string>

    <string name="export_equipment">导出设备</string>

    <string name="no_export_device">没有导出设备</string>

    <string name="camera_setting">摄像头设置</string>
    <string name="data_export">数据导出</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="submit">确认</string>
</resources>
